<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <include
            android:id="@+id/tool_bar"
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/bg_login"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_businessname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/input_businessname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_businessname"
                android:inputType="text"
                android:maxLines="4" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_businessphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/input_businessphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_businessphone"
                android:inputType="phone"
                android:maxLength="10"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_businessearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/input_businessearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search_key"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_next_third"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_green"
            android:text="@string/btn_next"
            android:textColor="@color/white" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>