<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/user_cat_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_margin="4dp"
        android:text="@string/user_cat_list"
        android:textColor="@color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cat_recyler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_cat_text"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_grey" >

        <CheckBox
            android:id="@+id/agree_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/agree_terms" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/agree_check"
            android:layout_toRightOf="@+id/agree_check"
            android:background="@drawable/btn_green"
            android:text="@string/btn_register"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>