<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/material_grey_600" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_addmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/input_greeting_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_greeting_msg"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:maxLines="10"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingStart="6dp"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submitmsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_green"
        android:text="@string/save"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_submitmsg"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_tranparent"
        android:text="@string/cancel"
        android:textColor="@color/bg_blue" />

</RelativeLayout>